# Computer-vision

./: README.md
Lab 1/: main.cpp
Lab 2/: CMakeLists.txt
Lab 2/img/Checkerboard images/: a
Lab 2/src/: main.cpp
Lab 3/: CMakeLists.txt
Lab 3/include/: filter.h
Lab 3/src/: filter.cpp  main.cpp
Lab 4/: CMakeLists.txt
Lab 4/include/: canny_hough.h
Lab 4/src/: canny_hough.cpp  main.cpp
Lab 5/: CMakeLists.txt
Lab 5/include/: panoramicImage.h  panoramic_utils.h
Lab 5/src/: main.cpp  panoramicImage.cpp
Lab 6/: CMakeLists.txt
